After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786718 - rtpbin: requesting send_rtcp_src_%u first fails
rtpbin: requesting send_rtcp_src_%u first fails
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.12.2
Other Linux
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-24 07:22 UTC by Matthew Waters (ystreet00)
Modified: 2017-08-29 02:49 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtpbin: also create session when creating the send_rtcp_src_%u pad (1.51 KB, patch)
2017-08-24 07:23 UTC, Matthew Waters (ystreet00)
committed Details | Review

Description Matthew Waters (ystreet00) 2017-08-24 07:22:03 UTC
If one requests the send_rtcp_src_%u pad before a recv_rtcp_%u pad, the session/pad would never be created and NULL was returned.  Switching the request order would work.
Comment 1 Matthew Waters (ystreet00) 2017-08-24 07:23:25 UTC
Created attachment 358299 [details] [review]
rtpbin: also create session when creating the send_rtcp_src_%u pad
Comment 2 Matthew Waters (ystreet00) 2017-08-29 02:49:43 UTC
commit f602b8e5b0267f3319a4ae6df11d45b1c634ad65
Author: Matthew Waters <matthew@centricular.com>
Date:   Thu Aug 24 17:06:38 2017 +1000

    rtpbin: also create session when creating the send_rtcp_src_%u pad
    
    If one requests the send_rtcp_src_%u pad before a recv_rtcp_sink_%u pad,
    the session/pad would never be created and NULL was returned.
    Switching the request order would work.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=786718

and 1.12 27b6f0f0437079bd77eef8147634d8377db145c6